kubernetes/gr-foundry/manifests/depot/depot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depot
  namespace: depot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depot
  template:
    metadata:
      labels:
        app: depot
    spec:
      containers:
        - name: depot
          image: ghcr.io/gaucho-racing/depot-server:latest
          ports:
            - containerPort: 9999
              name: http
          startupProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: depot
  namespace: depot
spec:
  selector:
    app: depot
  ports:
    - name: http
      port: 9999
      targetPort: http
