kubernetes/gr-foundry/manifests/depot/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: depot
spec:
  type: ExternalName
  externalName: postgres-prod.postgres-prod.svc.cluster.local
