kubernetes/gr-foundry/manifests/depot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: depot
  namespace: depot
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: depot.gauchoracing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kerbecs
                port:
                  number: 10310
